after tears, done

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="asset/reset.css">
     <link rel="stylesheet" type="text/css" href="asset/style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>STOPWATCH</title>
 </head>
 
 <body>
 
   <div id="stopwatch-box">
-  00:00:00
+  00:00:000
   </div>
 
   <div id="controls">
@@ -20,8 +21,10 @@
     <button class="btn-xlarge" id="reset">Reset</button>
     <button class="btn-xlarge" id="lap">Lap</button>
   </div>
+  <div id="lap-box"></div>
 
  
 </body>
 <script src="asset/app.js"></script>
+
 </html>
